--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           pip install tomlkit
+        env:
+          PIP_BREAK_SYSTEM_PACKAGES: '1'
       - id: checker
         run: |
           python checker.py > $GITHUB_OUTPUT
@@ -43,6 +45,7 @@ jobs:
           python -m build
           twine upload dist/*
         env:
+          PIP_BREAK_SYSTEM_PACKAGES: '1'
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
 
