Fix InvalidDistribution error while uploading
See: https://github.com/pypa/twine/issues/1216

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           ref: ${{ needs.check.outputs.version }}
       - run: |
-          pip install build twine
+          pip install --upgrade build packaging twine
           python -m build
           twine upload dist/*
         env:
